# Humanoid

./: ColorModelData.ini  filename.py
install/: local_setup.sh  setup.sh
install/imageprocess/lib/imageprocess/: image = imageprocess.image:mainimage_test
install/imageprocess/share/imageprocess/: package.sh
install/motionpackage/lib/motionpackage/: motion
install/motionpackage/share/motionpackage/: package.sh  package.xml
install/serial/share/serial/: local_setup.sh  package.sh  package.xml
install/tku_libs/share/tku_libs/: package.sh
install/tku_msgs/share/tku_msgs/: local_setup.sh  package.sh
install/tkulibs/lib/tkulibs/: location
install/tkulibs/share/tkulibs/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/usb_cam/include/usb_cam/: tdataunit.hpp  usb_cam_node.hpp  utils.hpp
install/usb_cam/lib/usb_cam/: usb_cam_node_exe
interface/: ImageProcessInterface.html  new_image.html
interface/css/: styles.css
interface/js/: test.js
interface/js/roslib/: roslib.js
log/: latest_build
src/imageprocess/: setup.py
src/imageprocess/imageprocess/: image.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/motionpackage/: setup.py
src/motionpackage/motionpackage/: aaa.py  motion.py
src/serial/: CMakeLists.txt
src/serial/src/: serial.cpp
src/tku_msgs/: CMakeLists.txt
src/tkulibs/: setup.cfg  setup.py
src/tkulibs/tkulibs/: location.py
test_cssl/cssl/: cssl.c  motionpackage.cpp  motionpackage.h  motionpackage_executable  test  test.c
(+89 files in other folders)
